samples/_failures_safe/1761306340_50af5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16f9d51b.c: In function ‘handle_event’:
./samples/SAFE/__tmp_16f9d51b.c:151:13: error: expected declaration or statement at end of input
  151 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_16f9d51b.c:151:13: error: expected declaration or statement at end of input
